syntax = 'proto3';

package m3uetcpb;

option go_package = './m3uetcpb';

import 'api/m3uetcpb/common.proto';
import 'api/m3uetcpb/track.proto';

service CollectionSvc {
    rpc GetCollection(GetCollectionRequest) returns (GetCollectionResponse);
    rpc GetAllCollections(Empty) returns (GetAllCollectionsResponse);
    rpc AddCollection(AddCollectionRequest) returns (AddCollectionResponse);
    rpc RemoveCollection(RemoveCollectionRequest) returns (Empty);
    rpc UpdateCollection(UpdateCollectionRequest) returns (Empty);
    rpc ScanCollection(ScanCollectionRequest) returns (Empty);
    rpc DiscoverCollections(Empty) returns (Empty);

    rpc SubscribeToCollectionStore(Empty)
        returns (stream SubscribeToCollectionStoreResponse);
    rpc UnsubscribeFromCollectionStore(UnsubscribeFromCollectionStoreRequest)
        returns (Empty);
}

message GetCollectionRequest {
    int64 id = 1;
}

message GetCollectionResponse {
    Collection collection = 1;
}

message GetAllCollectionsResponse {
    repeated Collection collections = 1;
}

message AddCollectionRequest {
    string name = 1;
    string description = 2;
    string location = 3;
    bool disabled = 4;
    bool remote = 5;
}

message AddCollectionResponse {
    int64 id = 1;
}

message RemoveCollectionRequest {
    int64 id = 1;
}

message UpdateCollectionRequest {
    int64 id = 1;
    string new_name = 2;
    string new_description = 3;
    bool enable = 4;
    bool disable = 5;
    bool make_remote = 6;
    bool make_local = 7;
}

message ScanCollectionRequest {
    int64 id = 1;
    bool update_tags = 2;
}

message SubscribeToCollectionStoreResponse {
    string subscription_id = 1;
    CollectionEvent event = 2;
    oneof item {
        CollectionTrack collection_track = 3;
        Collection collection = 4;
        Track track = 5;
    }
}

message UnsubscribeFromCollectionStoreRequest {
    string subscription_id = 1;
}

message Collection {
    int64 id = 1;
    int32 idx = 2;
    string name = 3;
    string description = 4;
    string location = 5;
    string remote_location = 6;
    bool hidden = 7;
    bool disabled = 8;
    bool remote = 9;
    int32 scanned = 10;
    int64 tracks = 11;
    int64 created_at = 101;
    int64 updated_at = 102;
}

message CollectionTrack {
    int64 id = 1;
    int64 collection_id = 2;
    int64 track_id = 3;
    int64 created_at = 101;
    int64 updated_at = 102;
}

enum CollectionEvent {
    CE_NONE = 0;
    CE_INITIAL = 1;
    CE_INITIAL_DONE = 2;
    CE_ITEM_ADDED = 3;
    CE_ITEM_CHANGED = 4;
    CE_ITEM_REMOVED = 5;
}
